src/objects/Project__c.object
<CustomObject>
    <fields>
        <fullName>Budget_By__c</fullName>
        <label>Budget By</label>
        <picklist>
            <controllingField>Has_Budget__c</controllingField>
            <picklistValues>
                <fullName>Total Project Hours</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Total Project Fees</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hours per Task</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hours per Person</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Budget__c</fullName>
        <label>Budget</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Client__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ends_On__c</fullName>
        <label>Ends On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Has_Budget__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Budget</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Project_Code__c</fullName>
        <externalId>true</externalId>
        <label>Project Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Starts_On__c</fullName>
        <label>Starts On</label>
        <type>Date</type>
    </fields>
    <label>Project</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>